@@ -182,6 +182,8 @@ Changes since 2.1.4
 96. src/slang.c: change #93 introduced a small leak.
 97. src/slang.c: optimization tweak involving pushing the value of a
     structure field.
+98. src/slstdio.c: If fread/fwrite returns a short, non-zero item count,
+    clear the error and try again.
 
 {{{ Previous Versions
 
